--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,33 +12,37 @@ on:
   schedule:
     - cron: '0 0 * * 0' # Every Sunday at midnight UTC
 
-jobs:
+env:
+  CACHIX_USER: gfanton
+  UPDATE_BRANCH: flake-update
 
+jobs:
   build-macos-env:
     name: Build/cache macOS Nix env
     runs-on: macos-latest
+    env:
+      CONFIG_NAME: githubCI
 
     steps:
-
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install Nix
-      uses: cachix/install-nix-action@v17
+      uses: cachix/install-nix-action@v20
       with:
         extra_nix_config: |
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Cachix
-      uses: cachix/cachix-action@v10
+      uses: cachix/cachix-action@v12
       with:
-        name: malo
-        signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
+        name: ${{ env.CACHIX_USER }}
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
     - name: If scheduled, update inputs
       if: ${{ github.event_name == 'schedule' && success() }}
       run: |
-        nix flake update
+        make update
 
     - name: Build and switch to nix-darwin env
       run: |
@@ -51,41 +55,42 @@ jobs:
         nix build .#darwinConfigurations.bootstrap-x86.system
         ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap-x86
         # Build and switch to full config
-        /run/current-system/sw/bin/fish -c 'darwin-rebuild switch --flake .#githubCI'
-
-    - name: If scheduled, push commit with updated inputs
-      if: ${{ github.event_name == 'schedule' && success() }}
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git aa
-        git cm "Update inputs"
-        git push
+        /run/current-system/sw/bin/zsh -c "darwin-rebuild switch --flake .#$CONFIG_NAME"
+        
+    # - name: If scheduled, push commit with updated inputs
+    #   if: ${{ github.event_name == 'schedule' && success() }}
+    #   run: |
+    #     git config user.name github-actions
+    #     git config user.email github-actions@github.com
+    #     git aa
+    #     git cm "Update inputs"
+    #     git push
 
   build-linux-env:
     name: Build/cache Linux Nix env
     runs-on: ubuntu-latest
-
+    env:
+      CONFIG_NAME: cloud
     steps:
 
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install Nix
-      uses: cachix/install-nix-action@v17
+      uses: cachix/install-nix-action@v20
       with:
         extra_nix_config: |
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Cachix
-      uses: cachix/cachix-action@v10
+      uses: cachix/cachix-action@v12
       with:
-        name: malo
-        signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
+        name: ${{ env.CACHIX_USER }}
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
     - name: Build and switch to home-manager env
       run: |
         # Prevent conflict between Cachix installed by workflow and the one installed in the config
         nix-env --set-flag priority 1 cachix
         # Build and switch to home-manager env
-        nix build .#homeConfigurations.malo.activationPackage; ./result/activate
+        nix build ".#homeConfigurations.$CONFIG_NAME.activationPackage"; ./result/activate
