--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
     name: Build/cache Linux Nix env
     runs-on: ubuntu-latest
     env:
-      CONFIG_NAME: cloud
+      CONFIG_NAME: githubCI
     steps:
 
     - name: Checkout repository
