feat: add scheduler
Signed-off-by: gfanton <8671905+gfanton@users.noreply.github.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,8 @@ name: Update flake inputs
 
 on:
   workflow_dispatch:
-
+  schedule:
+    - cron: '0 0 * * 6' # Every Sunday at midnight UTC
 env:
   GITHUB_REVIEWER: gfanton
   CACHIX_USER: gfanton
