--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Generate new generation from update
       id: update
       run: |
-        nix flake update 2>&1 | tee /tmp/lock.report.txt
+        nix flake update 2>&1 | grep -v 'warning:' | tee /tmp/lock.report.txt
 
         # update all inputs by recreating the flake
         nix build ".#homeConfigurations.$CONFIG_NAME.activationPackage"
@@ -66,9 +66,11 @@ jobs:
         touch CHANGELOG.md
         nix-shell -p nvd --run "nvd diff $nixos_old_gen $nixos_new_gen" | tail -n +3 | tee /tmp/new.report.md
 
+        export INPUT_DATE="$(date +%F)"
+
         # create body report 
-        cat <<EOT >> /tmp/body.report.md
-        ## Update $(date +%F)
+        cat <<EOT > /tmp/body.report.md
+        ## Update $INPUT_DATE
         \`\`\`go
         $(cat /tmp/new.report.md)
         \`\`\`
@@ -79,14 +81,14 @@ jobs:
         EOT
 
         # update current changelog
-        cat <<EOT >> CHANGELOG.md
+        cat <<EOT > CHANGELOG.md
         $(cat /tmp/body.report.md)
 
         $(cat CHANGELOG.md)
         EOT
 
         # output date update
-        echo "inputs-date=$(date +%F)" >> "$GITHUB_OUTPUT"
+        echo "inputs-date=$INPUT_DATE" >> "$GITHUB_OUTPUT"
 
     - name: '[hack] config file'
       run: |
@@ -103,7 +105,6 @@ jobs:
         title: "nix: ${{ steps.update.outputs.inputs-date }} inputs update"
         body-path: '/tmp/body.report.md'
         assignees: '${{ env.GITHUB_REVIEWER }}'
-        reviewers: '${{ env.GITHUB_REVIEWER }}'
         commit-message: "Update ${{ steps.update.outputs.inputs-date }}"
         base: ${{ env.BASE_BRANCH }}
         branch: ${{ env.REF_BRANCH }}
