--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,6 +8,9 @@ on:
 env:
   GITHUB_REVIEWER: gfanton
   CACHIX_USER: gfanton
+  PR_USER_NAME: gfanton-bot
+  PR_USER_MAIL: 50772775+gfanton-bot@users.noreply.github.com
+  PR_FORK: gfanton-bot/nixpkgs
   BASE_BRANCH: master
   REF_BRANCH: nix/flake-update-inputs
 
@@ -98,14 +101,16 @@ jobs:
         mv /tmp/gitconfig /home/runner/.config/git/config
 
         # set github action as the user
-        git config --global user.name 'github-action'
-        git config --global user.email 'github-action@users.noreply.github.com'
+        git config --global user.name '${{ env.PR_USER_NAME }}'
+        git config --global user.email '${{ env.PR_USER_MAIL }}'
 
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v5
       with:
-        author: 'gfanton-bot <50772775+gfanton-bot@users.noreply.github.com>'
+        committer: '${{ env.PR_USER_NAME }} <${{ env.PR_USER_MAIL }}>'
+        author: '${{ env.PR_USER_NAME }} <${{ env.PR_USER_MAIL }}>'
+        push-to-fork: '${{ env.PR_FORK }}'
         token: '${{ secrets.GH_PAT }}'
         title: "nix: ${{ steps.update.outputs.inputs-date }} inputs update"
         body-path: '/tmp/body.report.md'
