--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: Build Nix envs
 
 on:
   workflow_dispatch:
+  pull_request:
+    paths:
+    - '**'
+    - '!*.md'      
   push:
     paths:
     - '**'
