--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build-macos-env:
     name: Build/cache macOS Nix env
-    runs-on: macos-latest
+    runs-on: macos-14
     env:
       CONFIG_NAME: githubCI
 
@@ -35,7 +35,7 @@ jobs:
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Cachix
-      uses: cachix/cachix-action@v12
+      uses: cachix/cachix-action@v14
       with:
         name: ${{ env.CACHIX_USER }}
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
@@ -49,14 +49,14 @@ jobs:
         nix-env --set-flag priority 1 cachix
 
         # Build to bootstrap config
-        nix build .#darwinConfigurations.bootstrap-x86.system
+        nix build .#darwinConfigurations.bootstrap-arm.system
 
         # [hack] remove conflicting files
         sudo rm -f /etc/nix/nix.conf
         sudo rm -f /etc/shells
 
         # Switch to bootstrap config
-        ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap-x86
+        ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap-arm
 
         # Build and switch to full config
         /run/current-system/sw/bin/zsh -c "darwin-rebuild switch --flake .#$CONFIG_NAME"
