wip: debug init
Signed-off-by: gfanton <8671905+gfanton@users.noreply.github.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -66,6 +66,7 @@ jobs:
         ./result/activate switch --verbose --fallback
 
         # Source result
+        find ./result -iname 'bashrc'
         source ./result/etc/bashrc
 
         # Determine the new and old generations
