--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         # Build and Switch to config
         nix build .#darwinConfigurations.githubCI.system
         # Build and switch to full config
-        ./result/sw/bin/darwin-rebuild switch --flake .#githubCI
+        sudo ./result/sw/bin/darwin-rebuild switch --flake .#githubCI
 
   build-linux-env:
     name: Build/cache Linux Nix env
